--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Yatin Sharma</title>
 	</head>
 	<body>
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
+        		<h1>Hi there, I'm Yatin Sharma!</h1>
 		<footer>
     		<ul>
         		<li><a href="mailto:sharmayatin489@gmail.com">email</a></li>
