--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:sharmayatin489@gmail.com">email</a></li>
-        		<li><a href="https://github.com/syatin003">github.com/hankquinlan</a></li>
+        		<li><a href="https://github.com/syatin003">github.com/syatin003</a></li>
 			</ul>
 		</footer>
 	</body>
